--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,6 +1,7 @@
 <ul>
     <li><a href="/">Home</a></li>
     <li><a href="/about">About</a></li>
+    <li><a href="/projects">Projects</a></li>
     
 </ul>
 
